# NGT

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/NGT/: ArrayFile.h  CMakeLists.txt  Clustering.h  Common.h  Graph.cpp  Graph.h  GraphOptimizer.h  GraphReconstructor.h  Index.cpp  Index.h  MmapManagerDefs.h  Node.h  ObjectRepository.h  ObjectSpace.h  ObjectSpaceRepository.h  Optimizer.h  PrimitiveComparator.h  SharedMemoryAllocator.h  Thread.cpp  Thread.h  Tree.cpp  Tree.h  Version.h  defines.h.in
lib/NGT/NGTQ/: QuantizedGraph.h  Quantizer.h
samples/: CMakeLists.txt
samples/cosine-float/: CMakeLists.txt
samples/hamming-uint8/: CMakeLists.txt
samples/jaccard-sparse/: CMakeLists.txt
samples/l2-float/: CMakeLists.txt  l2-float.cpp  l2-float_evaluation.cpp  l2-float_stats.cpp
samples/l2-uint8/: CMakeLists.txt  l2-uint8.cpp
samples/l2-uint8-range-search/: CMakeLists.txt
